--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Thyroid Disease Prediction</title>
   <style>
     body {
@@ -43,39 +45,39 @@
 <body>
   <div class="form-container">
     <h1>Thyroid Disease Prediction</h1>
-    <form action="/predict" method="POST">
-      <input type="number" step="any" name="age" placeholder="Age (e.g., 35)" required>
-      <input type="number" name="sex" placeholder="Sex (0 for Male, 1 for Female)" required>
-      <input type="number" name="on_thyroxine" placeholder="On Thyroxine (0 or 1)" required>
-      <input type="number" name="query_on_thyroxine" placeholder="Query On Thyroxine (0 or 1)" required>
-      <input type="number" name="on_antithyroid_medication" placeholder="On Antithyroid Medication (0 or 1)" required>
-      <input type="number" name="sick" placeholder="Sick (0 or 1)" required>
-      <input type="number" name="pregnant" placeholder="Pregnant (0 or 1)" required>
-      <input type="number" name="thyroid_surgery" placeholder="Thyroid Surgery (0 or 1)" required>
-      <input type="number" name="I131_treatment" placeholder="I131 Treatment (0 or 1)" required>
-      <input type="number" name="query_hypothyroid" placeholder="Query Hypothyroid (0 or 1)" required>
-      <input type="number" name="query_hyperthyroid" placeholder="Query Hyperthyroid (0 or 1)" required>
-      <input type="number" name="lithium" placeholder="Lithium (0 or 1)" required>
-      <input type="number" name="goitre" placeholder="Goitre (0 or 1)" required>
-      <input type="number" name="tumor" placeholder="Tumor (0 or 1)" required>
-      <input type="number" name="hypopituitary" placeholder="Hypopituitary (0 or 1)" required>
-      <input type="number" name="psych" placeholder="Psych (0 or 1)" required>
-      <input type="number" name="TSH_measured" placeholder="TSH Measured (0 or 1)" required>
-      <input type="number" name="T3_measured" placeholder="T3 Measured (0 or 1)" required>
-      <input type="number" name="TT4_measured" placeholder="TT4 Measured (0 or 1)" required>
-      <input type="number" name="T4U_measured" placeholder="T4U Measured (0 or 1)" required>
-      <input type="number" name="FTI_measured" placeholder="FTI Measured (0 or 1)" required>
-      <input type="number" name="TBG_measured" placeholder="TBG Measured (0 or 1)" required>
-      <input type="number" step="any" name="TSH" placeholder="TSH Level (e.g., 1.3)" required>
-      <input type="number" step="any" name="T3" placeholder="T3 Level (e.g., 2.5)" required>
-      <input type="number" step="any" name="TT4" placeholder="TT4 Level (e.g., 100)" required>
-      <input type="number" step="any" name="T4U" placeholder="T4U Level (e.g., 0.9)" required>
-      <input type="number" step="any" name="FTI" placeholder="FTI Level (e.g., 120)" required>
-      <input type="number" step="any" name="TBG" placeholder="TBG Level (e.g., 0.0)" required>
+    <form id="prediction-form">
+      <!-- Input fields from feature1 to feature27 -->
+      <input type="number" step="any" id="feature1" placeholder="Age (e.g., 35)" required>
+      <input type="number" id="feature2" placeholder="Sex (0 for Male, 1 for Female)" required>
+      <input type="number" id="feature3" placeholder="On Thyroxine (0 or 1)" required>
+      <input type="number" id="feature4" placeholder="Query On Thyroxine (0 or 1)" required>
+      <input type="number" id="feature5" placeholder="On Antithyroid Medication (0 or 1)" required>
+      <input type="number" id="feature6" placeholder="Sick (0 or 1)" required>
+      <input type="number" id="feature7" placeholder="Pregnant (0 or 1)" required>
+      <input type="number" id="feature8" placeholder="Thyroid Surgery (0 or 1)" required>
+      <input type="number" id="feature9" placeholder="I131 Treatment (0 or 1)" required>
+      <input type="number" id="feature10" placeholder="Query Hypothyroid (0 or 1)" required>
+      <input type="number" id="feature11" placeholder="Query Hyperthyroid (0 or 1)" required>
+      <input type="number" id="feature12" placeholder="Lithium (0 or 1)" required>
+      <input type="number" id="feature13" placeholder="Goitre (0 or 1)" required>
+      <input type="number" id="feature14" placeholder="Tumor (0 or 1)" required>
+      <input type="number" id="feature15" placeholder="Hypopituitary (0 or 1)" required>
+      <input type="number" id="feature16" placeholder="Psych (0 or 1)" required>
+      <input type="number" id="feature17" placeholder="TSH Measured (0 or 1)" required>
+      <input type="number" id="feature18" placeholder="T3 Measured (0 or 1)" required>
+      <input type="number" id="feature19" placeholder="TT4 Measured (0 or 1)" required>
+      <input type="number" id="feature20" placeholder="T4U Measured (0 or 1)" required>
+      <input type="number" id="feature21" placeholder="FTI Measured (0 or 1)" required>
+      <input type="number" id="feature22" placeholder="TBG Measured (0 or 1)" required>
+      <input type="number" step="any" id="feature23" placeholder="TSH Level (e.g., 1.3)" required>
+      <input type="number" step="any" id="feature24" placeholder="T3 Level (e.g., 2.5)" required>
+      <input type="number" step="any" id="feature25" placeholder="TT4 Level (e.g., 100)" required>
+      <input type="number" step="any" id="feature26" placeholder="T4U Level (e.g., 0.9)" required>
+      <input type="number" step="any" id="feature27" placeholder="FTI Level (e.g., 120)" required>
       <button type="submit">Predict</button>
     </form>
-    <div class="result">{{ prediction_text }}</div>
+    <div id="result" class="result"></div>
   </div>
-  <script src="index.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
