--- a/index.html
+++ b/index.html
@@ -47,33 +47,29 @@
     <h1>Thyroid Disease Prediction</h1>
     <form id="prediction-form">
       <!-- Input fields from feature1 to feature27 -->
-      <input type="number" step="any" id="feature1" placeholder="Age (e.g., 35)" required>
-      <input type="number" id="feature2" placeholder="Sex (0 for Male, 1 for Female)" required>
-      <input type="number" id="feature3" placeholder="On Thyroxine (0 or 1)" required>
-      <input type="number" id="feature4" placeholder="Query On Thyroxine (0 or 1)" required>
-      <input type="number" id="feature5" placeholder="On Antithyroid Medication (0 or 1)" required>
-      <input type="number" id="feature6" placeholder="Sick (0 or 1)" required>
-      <input type="number" id="feature7" placeholder="Pregnant (0 or 1)" required>
-      <input type="number" id="feature8" placeholder="Thyroid Surgery (0 or 1)" required>
-      <input type="number" id="feature9" placeholder="I131 Treatment (0 or 1)" required>
-      <input type="number" id="feature10" placeholder="Query Hypothyroid (0 or 1)" required>
-      <input type="number" id="feature11" placeholder="Query Hyperthyroid (0 or 1)" required>
-      <input type="number" id="feature12" placeholder="Lithium (0 or 1)" required>
-      <input type="number" id="feature13" placeholder="Goitre (0 or 1)" required>
-      <input type="number" id="feature14" placeholder="Tumor (0 or 1)" required>
-      <input type="number" id="feature15" placeholder="Hypopituitary (0 or 1)" required>
-      <input type="number" id="feature16" placeholder="Psych (0 or 1)" required>
-      <input type="number" id="feature17" placeholder="TSH Measured (0 or 1)" required>
-      <input type="number" id="feature18" placeholder="T3 Measured (0 or 1)" required>
-      <input type="number" id="feature19" placeholder="TT4 Measured (0 or 1)" required>
-      <input type="number" id="feature20" placeholder="T4U Measured (0 or 1)" required>
-      <input type="number" id="feature21" placeholder="FTI Measured (0 or 1)" required>
-      <input type="number" id="feature22" placeholder="TBG Measured (0 or 1)" required>
-      <input type="number" step="any" id="feature23" placeholder="TSH Level (e.g., 1.3)" required>
-      <input type="number" step="any" id="feature24" placeholder="T3 Level (e.g., 2.5)" required>
-      <input type="number" step="any" id="feature25" placeholder="TT4 Level (e.g., 100)" required>
-      <input type="number" step="any" id="feature26" placeholder="T4U Level (e.g., 0.9)" required>
-      <input type="number" step="any" id="feature27" placeholder="FTI Level (e.g., 120)" required>
+     <form>
+  <input type="number" id="feature3" placeholder="On Thyroxine (0 or 1)" required>
+  <input type="number" id="feature4" placeholder="Query On Thyroxine (0 or 1)" required>
+  <input type="number" id="feature5" placeholder="On Antithyroid Medication (0 or 1)" required>
+  <input type="number" id="feature6" placeholder="Sick (0 or 1)" required>
+  <input type="number" id="feature7" placeholder="Pregnant (0 or 1)" required>
+  <input type="number" id="feature8" placeholder="Thyroid Surgery (0 or 1)" required>
+  <input type="number" id="feature9" placeholder="I131 Treatment (0 or 1)" required>
+  <input type="number" id="feature10" placeholder="Query Hypothyroid (0 or 1)" required>
+  <input type="number" id="feature11" placeholder="Query Hyperthyroid (0 or 1)" required>
+  <input type="number" id="feature12" placeholder="Lithium (0 or 1)" required>
+  <input type="number" id="feature13" placeholder="Goitre (0 or 1)" required>
+  <input type="number" id="feature14" placeholder="Tumor (0 or 1)" required>
+  <input type="number" id="feature15" placeholder="Hypopituitary (0 or 1)" required>
+  <input type="number" id="feature16" placeholder="Psych (0 or 1)" required>
+  <input type="number" id="feature17" placeholder="TSH Measured (0 or 1)" required>
+  <input type="number" id="feature18" placeholder="T3 Measured (0 or 1)" required>
+  <input type="number" id="feature19" placeholder="TT4 Measured (0 or 1)" required>
+  <input type="number" id="feature20" placeholder="T4U Measured (0 or 1)" required>
+  <input type="number" id="feature21" placeholder="FTI Measured (0 or 1)" required>
+  <input type="number" id="feature22" placeholder="TBG Measured (0 or 1)" required>
+</form>
+
       <button type="submit">Predict</button>
     </form>
     <div id="result" class="result"></div>
