--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <label for="TBG">TBG Level:</label>
       <input type="number" id="TBG" step="any" required><br>
 
-      <button type="submit">Predict</button>
+      <button onclick="getprediction()">Predict</button>
     </form>
 
     <h2>Prediction Result:</h2>
@@ -139,8 +139,7 @@
 
   <script>
     const API_BASE_URL = "https://ci-goleproject.onrender.com";
-    
-    document.getElementById('prediction-form').addEventListener('submit', async function(event) {
+    function getprediction(event) {
         event.preventDefault();
 
         // Collecting values from the form
